--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Unicórnios são de Verdade</title>
   <link rel="stylesheet" href="estilo.css">
+  <link href='https://fonts.googleapis.com/css?family=Kaushan Script' rel='stylesheet'>
 </head>
 <body>
   <div id="cabecalho">
@@ -11,8 +12,10 @@
   </div>
 
   <div id="verdade">
-    <img src="images/unicorn.jpg">
-    <h2>A verdade oculta</h2>
+    <div id=imagemVerdade> <img src="images/unicorn.jpg"> </div>
+    
+    <div id=textoVerdade>
+    <h2>  A verdade oculta </h2>
     <p>
       Por muito tempo acreditou-se que os unicórnios haviam sido extintos ou
       até mesmo que eles nunca existiram. Contudo, trabalhos recentes de
@@ -39,109 +42,112 @@
     </p>
     <audio src="audio/brobdingnagianbards_theunicornsong.mp3" controls></audio>
   </div>
+</div>
 
   <div id="hoje">
+    <div id="dentroHoje">
     <h2>Unicórnios Hoje</h2>
     <h3>Pugnicórnio</h3>
-    <img src="images/pug.png">
-    <p>
+    <img class=imgUni src="images/pug.png"> 
+    <p class="tira">
       Um unicórnio disfarçado de cachorro. Ele escolheu o Pug pois os humanos
       costumam alugar cães dessa raça para a utilização dos mais diversos tipos
       de fantasias.
     </p>
 
     <h3>Papelnicórnio</h3>
-    <img src="images/paper.png">
-    <p>
+    <img class=imgUni src="images/paper.png">
+    <p class="tira"> 
       Unicórnio que, quando há alguém olhando, torna-se do tipo papel, mas
       quando não tem ninguém por perto, revela sua forma natural.
     </p>
 
     <h3>Cosplaynicórnio</h3>
-    <img src="images/person.png">
-    <p>
+    <img class=imgUni src="images/person.png">
+    <p class="tira">
       Muito encontrado em eventos de jogos, desenhos e no Japão, o
       Cosplaynicórnio fantasia-se de humano-que-está-fantasiado-de-unicórnio na
       tentativa de se passar despercebido.
     </p>
   </div>
+  </div>
 
   <div id="musica">
     <h2>A Música do Unicórnio</h2>
     <p>
-      A long time ago, when the Earth was green
-      There was more kinds of animals than you've ever seen
-      They'd run around free while the Earth was being born
-      And the loveliest of all was the unicorn
+      A long time ago, when the Earth was green <br>
+      There was more kinds of animals than you've ever seen <br>
+      They'd run around free while the Earth was being born <br>
+      And the loveliest of all was the unicorn <br>
+    </p>
+    <p class=EspacoMusica>
+    	There was green alligators and long-necked geese <br>
+    	Some humpty backed camels and some chimpanzees <br>
+    	Some cats and rats and elephants, but sure as you're born <br>
+    	The loveliest of all was the unicorn <br>
     </p>
     <p>
-    	There was green alligators and long-necked geese
-    	Some humpty backed camels and some chimpanzees
-    	Some cats and rats and elephants, but sure as you're born
-    	The loveliest of all was the unicorn
+      The Lord seen some sinning and it gave Him pain <br>
+      And He says, "Stand back, I'm going to make it rain" <br>
+      He says, "Hey Noah, I'll tell you what to do <br>
+      Build me a floating zoo, <br>
+      and take some of those... <br>
+    </p>
+    <p class=EspacoMusica>
+    	Green alligators and long-necked geese <br> 
+    	Some humpty backed camels and some chimpanzees <br>
+    	Some cats and rats and elephants, but sure as you're born <br>
+    	Don't you forget My unicorns <br>
     </p>
     <p>
-      The Lord seen some sinning and it gave Him pain
-      And He says, "Stand back, I'm going to make it rain"
-      He says, "Hey Noah, I'll tell you what to do
-      Build me a floating zoo,
-      and take some of those...
-    </p>
-    <p>
-    	Green alligators and long-necked geese
-    	Some humpty backed camels and some chimpanzees
-    	Some cats and rats and elephants, but sure as you're born
-    	Don't you forget My unicorns
-    </p>
-    <p>
-      Old Noah was there to answer the call
-      He finished up making the ark just as the rain started to fall
-      He marched the animals two by two
-      And he called out as they came through
+      Old Noah was there to answer the call <br> 
+      He finished up making the ark just as the rain started to fall <br>
+      He marched the animals two by two <br>
+      And he called out as they came through <br>
       Hey Lord,
     </p>
-    <p>
-    	I've got green alligators and long-necked geese
-    	Some humpty backed camels and some chimpanzees
-    	Some cats and rats and elephants, but Lord, I'm so forlorn
-    	I just can't find no unicorns"
+    <p class=EspacoMusica> 
+    	I've got green alligators and long-necked geese <br>
+    	Some humpty backed camels and some chimpanzees <br>
+    	Some cats and rats and elephants, but Lord, I'm so forlorn <br>
+    	I just can't find no unicorns" <br>
     </p>
     <p>
-      And Noah looked out through the driving rain
-      Them unicorns were hiding, playing silly games
-      Kicking and splashing while the rain was falling
-      Oh, them silly unicorns
+      And Noah looked out through the driving rain <br>
+      Them unicorns were hiding, playing silly games <br>
+      Kicking and splashing while the rain was falling <br>
+      Oh, them silly unicorns <br>
+    </p>
+    <p class=EspacoMusica>
+    	There was green alligators and long-necked geese <br>
+    	Some humpty backed camels and some chimpanzees <br>
+    	Noah cried, "Close the door because the rain is falling <br>
+    	And we just can't wait for no unicorns" <br>
     </p>
     <p>
-    	There was green alligators and long-necked geese
-    	Some humpty backed camels and some chimpanzees
-    	Noah cried, "Close the door because the rain is falling
-    	And we just can't wait for no unicorns"
+      The ark started moving, it drifted with the tide <br>
+      The unicorns looked up from the rocks and they cried <br>
+      And the waters came down and sort of floated them away <br>
+      That's why you never see unicorns to this very day <br>
     </p>
-    <p>
-      The ark started moving, it drifted with the tide
-      The unicorns looked up from the rocks and they cried
-      And the waters came down and sort of floated them away
-      That's why you never see unicorns to this very day
-    </p>
-    <p>
-    	You'll see green alligators and long-necked geese
-    	Some humpty backed camels and some chimpanzees
-    	Some cats and rats and elephants, but sure as you're born
+    <p class=EspacoMusica>
+    	You'll see green alligators and long-necked geese <br>
+    	Some humpty backed camels and some chimpanzees <br>
+    	Some cats and rats and elephants, but sure as you're born <br>
     	You're never gonna see no unicorns
     </p>
     <div class="destacado">
       <p>
-        Now you might think this is the ending to the song,
-        But I'll have to tell you friends that in fact you're wrong
-        You see, Unicorns are magical, so when the rain started pouring,
-        They grew themselves some wings and they took to soaring.
+        Now you might think this is the ending to the song, <br>
+        But I'll have to tell you friends that in fact you're wrong <br>
+        You see, Unicorns are magical, so when the rain started pouring, <br>
+        They grew themselves some wings and they took to soaring. <br>
       </p>
-      <p>
-      	You'll see green alligators and long-necked geese
-      	Some humpty backed camels and some chimpanzees
-      	But if you're looking for the unicorns, don't be forlorn,
-      	The second star to the right and straight on until morning.
+      <p class=EspacoMusica>
+      	You'll see green alligators and long-necked geese <br>
+      	Some humpty backed camels and some chimpanzees <br>
+      	But if you're looking for the unicorns, don't be forlorn, <br>
+      	The second star to the right and straight on until morning. <br>
       </p>
     </div>
   </div>
